# AgenticWeb

./: .gitignore  CLAUDE.md  README.md  SETUP.md  firebase.json  setup_gcp.sh  takedown.sh
.github/: CICD.md
.github/workflows/: cicd.yml
agents/: .env.example  Dockerfile  deploy.sh  pyproject.toml  register_agents.py
agents/src/agents/: __init__.py  router.py
agents/src/agents/career_driver/: __init__.py  crew.py  models.py
agents/src/agents/career_driver/config/: agents.yaml  tasks.yaml
agents/src/agents/research/: __init__.py  crew.py  models.py
agents/src/agents/research/config/: agents.yaml  tasks.yaml
agents/src/agents/shared/: __init__.py  api.py  main.py  observability.py  runtime.py  server.py
agents/src/agents/shared/tools/: __init__.py  product_scraper.py
agents/src/agents/shopping/: __init__.py  crew.py  models.py
agents/src/agents/shopping/config/: agents.yaml  tasks.yaml
agents/src/agents/trip_planner/: __init__.py  crew.py  models.py
agents/src/agents/trip_planner/config/: agents.yaml  tasks.yaml
backend/: deploy.sh
backend/create_job/: .env.example  main.py  requirements.txt
backend/request_access/: .env.example  main.py  requirements.txt
frontend/: Dockerfile  deploy.sh  next.config.ts  package-lock.json  package.json
frontend/.firebase/: hosting.b3V0.cache
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/credentials/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/components/agent/: AgentForm.tsx  JobHistory.tsx  StepProgress.tsx
frontend/src/lib/: agents.ts  auth.ts  firebase.ts  jobs.ts
frontend/src/types/: index.ts
scripts/: agents-config.json  package-lock.json  package.json  register-agents.js
shopping_agent/: .env.example  Dockerfile  README.md  deploy.sh  pyproject.toml  shopping_recommendations.md
shopping_agent/src/shopping_agent/: api.py  crew.py  main.py  models.py  runtime.py  server.py
shopping_agent/src/shopping_agent/config/: agents.yaml  tasks.yaml
shopping_agent/src/shopping_agent/tools/: product_scraper.py
(+9 files in other folders)
