[project]
name = "agents"
version = "0.1.0"
description = "Unified multi-agent platform — plug-and-play AI agents powered by crewAI."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]==1.10.1",
    "fastapi>=0.115.5,<0.116",
    "google-cloud-pubsub==2.*",
    "cryptography>=42.0",
    "langtrace-python-sdk>=3.8.21,<4",
    "setuptools>=68,<81",
    "uvicorn[standard]>=0.31.1",
]

[project.optional-dependencies]
cloud = [
    "google-cloud-firestore==2.*",
    "google-cloud-pubsub==2.*",
    "gunicorn>=21.2",
]

[project.scripts]
agents = "agents.shared.main:run"
serve = "agents.shared.main:serve"
listen = "agents.shared.main:listen"
run_with_trigger = "agents.shared.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.crewai]
type = "crew"
